<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Photo">

    <io.github.triniwiz.fancycamera.FancyCamera
        android:id="@+id/PhotoView"
        android:layout_width="match_parent"
        android:layout_height="174dp"
        app:fcCameraPosition="front" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="goToHome"
        android:text="@string/view_home" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="takePhoto"
        android:text="@string/take_photo" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="toggleCamera"
        android:text="@string/toggle_camera" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="toggleFlash"
        android:text="@string/toggle_flash" />

    <ImageView
        android:layout_gravity="bottom"
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp" />
</LinearLayout>